--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
   "version": "0.1.0",
   "main": "index.js",
   "author": "Rem Kim",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "scripts" : {
+    "build" : "webpack"
+  }
 }
